@@ -1128,6 +1128,12 @@ CheckOtherHTTPHeaders( IN http_message_t * Req,
                         return RetCode;
                     }
                     break;
+                case HDR_ACCEPT_LANGUAGE:
+                    {
+                        memcpy( RespInstr->AcceptLanguageHeader, TmpBuf,
+                            sizeof( RespInstr->AcceptLanguageHeader ) - 1 );
+                        break;
+                    }
                 default:
                     /*
                        TODO 
@@ -1142,7 +1148,6 @@ CheckOtherHTTPHeaders( IN http_message_t * Req,
                        case HDR_CONTENT_LOCATION://return 1;
                        case HDR_ACCEPT: //return 1;
                        case HDR_ACCEPT_CHARSET://return 1;
-                       case HDR_ACCEPT_LANGUAGE://return 1;
                        case HDR_USER_AGENT: break;//return 1;
                      */
 
@@ -1404,6 +1409,7 @@ process_request( IN http_message_t * req,
             HTTP_PARTIAL_CONTENT,           // status code
             UpnpFileInfo_get_ContentType(finfo), // content type
             RespInstr,                      // range info
+            RespInstr,                      // language info
             "LAST-MODIFIED: ",
 	    UpnpFileInfo_get_LastModified(finfo),
             X_USER_AGENT,
@@ -1420,6 +1426,7 @@ process_request( IN http_message_t * req,
             RespInstr->ReadSendSize,        // content length
             UpnpFileInfo_get_ContentType(finfo), // content type
             RespInstr,                      // range info
+            RespInstr,                      // language info
             "LAST-MODIFIED: ",
 	    UpnpFileInfo_get_LastModified(finfo),
             X_USER_AGENT,
@@ -1435,6 +1442,7 @@ process_request( IN http_message_t * req,
             "RK" "TLD" "s" "tcS" "Xc" "sCc",
             HTTP_OK,                        // status code
             UpnpFileInfo_get_ContentType(finfo), // content type
+            RespInstr,                      // language info
             "LAST-MODIFIED: ",
 	    UpnpFileInfo_get_LastModified(finfo),
             X_USER_AGENT,
@@ -1452,6 +1460,7 @@ process_request( IN http_message_t * req,
                 HTTP_OK,                        // status code
                 RespInstr->ReadSendSize,        // content length
                 UpnpFileInfo_get_ContentType(finfo), // content type
+                RespInstr,                      // language info
                 "LAST-MODIFIED: ",
 	        UpnpFileInfo_get_LastModified(finfo),
                 X_USER_AGENT,
@@ -1466,6 +1475,7 @@ process_request( IN http_message_t * req,
                 "R" "TLD" "s" "tcS" "b" "Xc" "sCc",
                 HTTP_OK,                        // status code
                 UpnpFileInfo_get_ContentType(finfo), // content type
+                RespInstr,                      // language info
                 "LAST-MODIFIED: ",
 	        UpnpFileInfo_get_LastModified(finfo),
                 X_USER_AGENT,
@@ -1699,6 +1709,8 @@ web_server_callback( IN http_parser_t * parser,
     RespInstr.IsChunkActive = 0;
     RespInstr.IsRangeActive = 0;
     RespInstr.IsTrailers = 0;
+    memset( RespInstr.AcceptLanguageHeader, 0,
+       sizeof( RespInstr.AcceptLanguageHeader ) );
     // init
     membuffer_init( &headers );
     membuffer_init( &filename );
@@ -1753,7 +1765,7 @@ web_server_callback( IN http_parser_t * parser,
 
                 http_MakeMessage(
                     &headers, 1, 1,
-                    "RLTDSXcCc",
+                    "RTLSXcCc",
                     ret,
                     "text/html",
                     X_USER_AGENT );
